[package]
name = "mqtt-gateway"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "^2.0"
futures = "^0.3"
paho-mqtt = "^0.13"
env_logger = "^0.11"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
influxdb = { version = "^0.7", features = ["derive"] }
time = { version = "^0.3", features = ["serde", "serde-well-known"] }
chrono = "^0.4"
postgres = { version = "^0.19" , features = ["with-chrono-0_4"] }
serde_yml = { version = "0.0.12", features = [] }
anyhow = "^1.0"
regex = "^1.11"
async-trait = "^0.1"
log = "^0.4"
tokio = { version = "^1.47", features = ["rt", "rt-multi-thread", "macros"] }
async-channel = "1.9.0"

[dev-dependencies]
mockall = "^0.13"
