[package]
name = "mqtt-gateway"
version = "0.6.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = "^0.13"
env_logger = "^0.11"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
influxdb = { version = "^0.7", features = ["derive"] }
time = { version = "^0.3", features = ["serde", "serde-well-known"] }
chrono = "^0.4"
postgres = { version = "^0.19" , features = ["with-chrono-0_4"] }
serde_yaml_ng = { version = "^0.10", features = [] }
anyhow = "^1.0"
regex = "^1.12"
log = "^0.4"
async-compat = "0.2.5"
futures = { version = "0.3.31", features = ["futures-executor"] }

[dev-dependencies]
mockall = "^0.14"
serial_test = "3.2.0"
tempfile = "3.24.0"
